--- a/package.json
+++ b/package.json
@@ -51,6 +51,6 @@
   "private": false,
   "repository": {
     "type": "git",
-    "url": "https://github.com/snyk/graphlib.git"
+    "url": "https://github.com/ryanzhou7/graphlib"
   }
 }
