--- a/package.json
+++ b/package.json
@@ -52,5 +52,8 @@
   "repository": {
     "type": "git",
     "url": "https://github.com/ryanzhou7/graphlib"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
